--- a/Aula 13 - Interpolação Polinomail.ipynb
+++ b/Aula 13 - Interpolação Polinomail.ipynb
@@ -123,7 +123,11 @@
     "\n",
     "$p_{n}(x_{2}) = y_{2} = a_{0} + a_{1}x_{2} + a_{2}x_{2}^{2} + ... + a_{n}x_{2}^{n}$\n",
     "\n",
-    "$p_{n}(x_{3}) = y_{3} = a_{0} + a_{1}x_{3} + a_{2}x_{3}^{2} + ... + a_{n}x_{3}^{n}$"
+    "$p_{n}(x_{3}) = y_{3} = a_{0} + a_{1}x_{3} + a_{2}x_{3}^{2} + ... + a_{n}x_{3}^{n}$\n",
+    "\n",
+    "n equações e n incognitas ($a_{0}, a_{1},..., a_{n}$)\n",
+    "\n",
+    "$p_{n}(x_{k}) = y_{k} = a_{0} + a_{1}x_{k} + a_{2}x_{k}^{2} + ... + a_{n}x_{k}^{n}$"
    ]
   },
   {
@@ -131,16 +135,62 @@
    "id": "8f5041d9-6d29-49f1-b9dd-4b4eaacb69e8",
    "metadata": {},
    "source": [
-    "n equações e n incognitas ($a_{0}, a_{1},..., a_{n}$)"
+    "Matricialmente:\n",
+    "\n",
+    "(1 x0 x02 ... x0n)(a0)   (y0)\n",
+    "\n",
+    "(1 x1 x12 ... x1n)(a1) = (y1)\n",
+    "\n",
+    "(........ ... ...)(..)   (..)\n",
+    "\n",
+    "(1 xn xn2 ... xnn)(an)   (yn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69ecd245-b2e8-4fee-9b73-f8cd50c07748",
+   "metadata": {},
+   "source": [
+    "Notação Compacta:\n",
+    "\n",
+    "<center>Va = y .... I</center>\n",
+    "\n",
+    "<center>V é chamado de Matriz de Vandermonde.</center>\n",
+    "\n",
+    "Prova-se que det(V)$\\ne0$ se $x_{0}\\ne x_{1}\\ne x_{2}\\ne...\\ne x_{4}$. Ou seja, o sistema I tem solução única."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fa65434-1315-44f5-9895-67ce8511a865",
+   "metadata": {},
+   "source": [
+    "Exercícios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "547b4065-04ce-42d3-a82c-5244f9dfcf26",
+   "metadata": {},
+   "source": [
+    "1) Encontre o polinômio interpolador para {$(0,1), (1,6), (2,5), (3, -8)$}\n",
+    "\n",
+    "2) Um polinômio interpolador linear tem a forma $p_{1}(x) = a_{0} + a_{1}x$. Use a Matriz de Vandermonde para escrever uma expressão geral para $p_{1}(x)$ em função dos pontos {$(x_{0}, y_{0}), (x_{1}, y_{1})$}\n",
+    "\n",
+    "3) Escreva um funbção, em Python, que dados os pontos ${(x_{i}, y_{i})}_{i=1}^{i=n}$ retorne os coeficientes do polinômio interpolador de Vandermonde."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1229639-a6ee-4891-b1eb-d0863933fb0f",
+   "id": "2c67977d-db36-4998-bb87-1160e3f34f9a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "a0 + a1 + a2 + a3 + a4 + a5"
+   ]
   }
  ],
  "metadata": {
